# src/service/backend/src/modules/ordering/domains/entities/aggregates/order/order.aggregate.ts
@@ -6,6 +6,7 @@ import { OrderItem } from '../../../value-objects/order-item.vo';
 export class Order extends BaseEntity<string> {
   private constructor(
     id: string,
+    private readonly _userSubjectId: string | null,
     private _status: OrderStatus,
     private readonly _total: Money,
     private readonly _items: OrderItem[],
@@ -18,6 +19,7 @@ export class Order extends BaseEntity<string> {
 
   static createNew(input: {
     id: string;
+    userSubjectId?: string | null;
     total: Money;
     items: OrderItem[];
     now?: Date;
@@ -25,6 +27,7 @@ export class Order extends BaseEntity<string> {
     const now = input.now ?? new Date();
     return new Order(
       input.id,
+      input.userSubjectId ?? null,
       OrderStatus.PENDING_PAYMENT,
       input.total,
       input.items,
@@ -36,6 +39,7 @@ export class Order extends BaseEntity<string> {
 
   static rehydrate(input: {
     id: string;
+    userSubjectId: string | null;
     status: OrderStatus;
     total: Money;
     items: OrderItem[];
@@ -45,6 +49,7 @@ export class Order extends BaseEntity<string> {
   }): Order {
     return new Order(
       input.id,
+      input.userSubjectId,
       input.status,
       input.total,
       input.items,
@@ -69,6 +74,10 @@ export class Order extends BaseEntity<string> {
 
   get status(): OrderStatus {
     return this._status;
+  }
+
+  get userSubjectId(): string | null {
+    return this._userSubjectId;
   }
 
   get amount(): number {
@@ -101,6 +110,7 @@ export class Order extends BaseEntity<string> {
 
   toPrimitives(): {
     id: string;
+    userSubjectId: string | null;
     status: OrderStatus;
     amount: number;
     currency: string;
@@ -111,6 +121,7 @@ export class Order extends BaseEntity<string> {
   } {
     return {
       id: this.id,
+      userSubjectId: this._userSubjectId,
       status: this._status,
       amount: this.amount,
       currency: this.currency,
